[package]
name = "blocktastic"
version = "0.1.0"
authors = ["Kartikaya Gupta"]
edition = "2021"
license = "0BSD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.0"
hmac-sha256 = "1.1.4"
log = "0.4.17"

[dev-dependencies]
env_logger = { version = "0.9.0", default-features = false }
